"$Id$"
Top of CVS tree:
------------------------------------------------------------------------------

gtk/gx11.c: add a 'spell options' box to allow extra options to be passed to
spells, make any mouse button change the spell description, not just the
left one and reorder some gtk function calls to improve clarity
Brendan Lally 2006-10-21

Fixed compilation for some compilers.
gtk/gx11.c inventory.c
Ryo 2006-01-19

common/commands.c: actually read the right amount of data on an updspell
--
Add spell listing support to gcfclient and common, in particular:
common/client.c: addspell, updspell, delspell function pointers, send
   spellmon in setup
common/client.h: Spell struct, add attuned, repelled, denied to stats, add
   spelldata and spells_updated to player struct
common/commands.c: parse stat details concerning spell paths, addspell,
delspell, and updspell packet handling
common/newclient.h: new flags related to this
common/proto.h: function declarations
gtk/gx11.c: make the client->spells menu option show a window displaying all
   spells known to the player, have a function update_spell_list to update it,
   add a call to this to do_timeout.
Brendan Lally 2006-01-19

gtk/gx11.c: make skills display in a scroll pane, display all known skills,
   not just those with exp
Brendan Lally 2006-01-17

gtk/inventory.c: grey out close button when it won't do anything
Brendan Lally 2006-01-16

common/commands.c: In DeleteItem() properly handle more than one item.
Andreas Kirschbaum 2006-01-13

x11/png.c: Add same workaround from gtk/png.c to make it work on 64 bit
systems.
MSW 2006-01-01

Made item's nrof uint32, like server-side. Fix a crash in get_number if nrof < 0
 (not supposed to happen, server bug, but still).
Modified files:
 common/commands.c item.c item.h proto.h
Ryo 2005-12-27

gtk-v2/src/image.c: Remove call to free fog pixels (SDL) - with call in place,
   client crashes on double free in SDL mode after disconnecting from
   server.
MSW 2005-12-11
